# native_dumper

./: .gitignore  CHANGELOG.md  Cargo.toml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build_wheels.yml
src/native_dumper/: __init__.py  cursor.py  defines.py  dumper.py  errors.py  logger.py  stream.py
src/native_dumper/common/: __init__.py  cursor.py  defines.py  pyo3http.pyi  writer.py
src/native_dumper/common/pyo3http/: Cargo.toml
src/native_dumper/common/pyo3http/src/: lib.rs
