[metadata]
name = native-dumper
version = 0.3.4.7
description = Library for read and write Native format between Clickhouse and file.

[options]
packages = find:
package_dir =
    = src
install_requires =
    light-compressor==0.0.2.1
    nativelib==0.2.2.4
    sqlparse>=0.5.4

[options.packages.find]
where = src
