[metadata]
name = native-dumper
version = 0.3.5.2
description = Library for read and write Native format between Clickhouse and file.

[options]
packages = find:
package_dir =
    = src
install_requires =
    light-compressor==0.0.2.2
    nativelib==0.2.2.6
    sqlparse>=0.5.5

[options.packages.find]
where = src
